# django-mini-forum

./: LICENSE  Makefile  README.md  pyproject.toml
backend/: models.py  urls.py  views.py
backend/migrations/: 0001_initial.py  0002_alter_post_options.py  0003_comment.py  0004_comment_email.py
backend/templatetags/: markdown_tags.py
project/: urls.py
project/settings/: __init__.py  base-settings.py
project/settings/components/: base.py  database.py
templates/: base.html  index.html  layout.html
templates/posts/: post_detail.html  post_list.html
templates/static/: style.css
