[tool.poetry]
name = "aderforum"
version = "0.1.0"
description = ""
authors = ["Ader Konstantin <kot@aderci.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-split-settings = "^1.2.0"
markdown = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
